# grph

./: README.md  pyproject.toml
.github/workflows/: release.yml
Formula/: gfx-cli.rb  grph-cli.rb
docs/docs/: getting-started.md
docs/docs/cli-reference/: all-paths.md  centrality.md  common-neighbors.md  components.md  degree.md  ego.md  export.md  has-path.md  index.md  neighbors.md  path.md  reachable.md  stats.md  subgraph.md
homebrew/: README.md  gfx-cli.rb  update-formula.yml
src/gfx/: __init__.py  cli.py  formatters.py  models.py  parser.py
src/grph/: __init__.py
tests/: test_cli.py  test_graph_features.py
