[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gfx-cli"
version = "0.2.0"
description = "CLI tool for interrogating and browsing GEXF graph files"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jordan Terry" }
]
dependencies = [
    "click>=8.0",
    "networkx>=3.0",
    "rich>=13.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
gfx = "gfx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gfx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
