[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grph-cli"
version = "0.3.2"
description = "CLI tool for exploring, analyzing, and querying graph files"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jordan Terry" }
]
keywords = ["graph", "cli", "gexf", "networkx", "analysis", "traversal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0",
    "networkx>=3.0",
    "numpy>=1.24",
    "rich>=13.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/jordanterry/grph"
Documentation = "https://github.com/jordanterry/grph#readme"
Repository = "https://github.com/jordanterry/grph"
Issues = "https://github.com/jordanterry/grph/issues"

[project.scripts]
grph = "grph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/grph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
